objects/SFDC_Feature_Request__c.object
<CustomObject>
    <description>Feature Requests may come from customers and internal groups. They may be associated with related Bugs, and should be assigned an appropriate Product Manager to determine whether this Feature Request is rolled into a product release.</description>
    <fields>
        <fullName>Bug_Problem_Description__c</fullName>
        <label>Bug Problem Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bug__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bug</label>
        <referenceTo>SFDC_Bug__c</referenceTo>
        <relationshipName>R00N46000003QcipEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N46000003QcicEAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feature_Description__c</fullName>
        <label>Feature Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Feature_Status__c</fullName>
        <label>Feature Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feature_Subject__c</fullName>
        <label>Feature Subject</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Flag__c</fullName>
        <label>Flag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approval</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Needs-Work</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Feature Requests</relationshipLabel>
        <relationshipName>R00N46000003Qcl9EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release #</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4.0</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Origin__c</fullName>
        <label>Request Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Source Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Feature Requests</relationshipLabel>
        <relationshipName>Feature_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned PM</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N46000003Qcl1EAC</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Feature Request</label>
    <listViews>
        <fullName>AllFeatureRequests</fullName>
        <columns>NAME</columns>
        <columns>Feature_Subject__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Feature Requests</label>
    </listViews>
    <nameField>
        <label>Feature Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feature Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>